syntax = "proto3";

import "common.proto";

option java_package = "proto";
option java_multiple_files = true;

service ControllerService {
  rpc RegisterBroker(BrokerRegistrationRequest) returns (BrokerRegistrationResult);
  rpc UnregisterBroker(UnregisterBrokerRequest) returns (UnregisterBrokerResult);
}

message BrokerRegistrationRequest {
  string broker_id = 1;
  string broker_host = 2;
  uint32 broker_port = 3;
}

message BrokerRegistrationResult {
  string acknowledgement = 1;
  Status status = 2;
}

message UnregisterBrokerRequest {
  string broker_id = 1;
}

message UnregisterBrokerResult {
  string acknowledgement = 1;
  Status status = 2;
}
